changed the survey compile based on latest esbuild
Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

--- a/package.json
+++ b/package.json
@@ -49,29 +49,10 @@
 	"scripts": {
 		"verify": "node ./out/build/verify-tools.js",
 		"vscode:prepublish": "npm run build",
-		"compile": "npm-run-all compile:*",
-		"compile:ext": "tsc -p ./",
-		"compile:views": "webpack --mode production --config src/webview/webpack.config.js",
-		"compile:git-import-view": "webpack --mode development --config src/webview/git-import/webpack.config.js",
-		"dev:compile:log-view": "webpack --mode development --config src/webview/log/webpack.config.js",
-		"dev:compile:describe-view": "webpack --mode development --config src/webview/describe/webpack.config.js",
-		"dev:compile:cluster-view": "webpack --mode development --config src/webview/cluster/webpack.config.js",
-		"dev:compile:create-service-view": "webpack --mode development --config src/webview/create-service/webpack.config.js",
-		"dev:compile:devfile-registry-view": "webpack --mode development --config src/webview/devfile-registry/webpack.config.js",
-		"dev:compile:welcome-view": "webpack --mode development --config src/webview/welcome/webpack.config.js",
-		"dev:compile:git-import-view": "webpack --mode development --config src/webview/git-import/webpack.config.js",
-		"dev:compile:helm-chart-view": "webpack --mode development --config src/webview/helm-chart/webpack.config.js",
-		"dev:compile:survey-view": "webpack --mode development --config src/webview/survey/webpack.config.js",
-		"dev:run:log-view": "webpack-dev-server --mode development --config src/webview/log/webpack.config.js",
-		"dev:run:describe-view": "webpack-dev-server --mode development --config src/webview/describe/webpack.config.js",
-		"dev:run:cluster-view": "webpack-dev-server --port 9222 --mode development --config src/webview/cluster/webpack.config.js",
-		"dev:run:devfile-registry-view": "webpack-dev-server --port 9222 --mode development --config src/webview/devfile-registry/webpack.config.js",
-		"dev:run:welcome-view": "webpack-dev-server --port 9222 --mode development --config src/webview/welcome/webpack.config.js",
-		"dev:run:git-import-view": "webpack-dev-server --port 9222 --mode development --config src/webview/git-import/webpack.config.js",
-		"dev:run:helm-chart-view": "webpack-dev-server --port 9222 --mode development --config src/webview/helm-chart/webpack.config.js",
-		"dev:run:survey-view": "webpack-dev-server --port 9222 --mode development --config src/webview/survey/webpack.config.js",
-		"dev:run:create-service-view": "webpack-dev-server --mode development --config src/webview/create-service/webpack.config.js",
-		"watch": "tsc -watch -p ./",
+		"compile": "run-p compile:*",
+		"compile:ext": "tsc -b ./",
+		"compile:checkWebviews": "tsc -p ./src/webview -noEmit",
+		"compile:webviews": "node ./build/esbuild.mjs",
 		"clean": "shx rm -rf out/build out/coverage out/src out/test out/tools out/test-resources out/*Viewer",
 		"lint": "eslint . --ext .ts --quiet",
 		"lint-fix": "eslint . --ext .ts --fix",
