--- a/src/webview/survey/app/tsconfig.json
+++ b/src/webview/survey/app/tsconfig.json
@@ -3,26 +3,19 @@
         "module": "esnext",
         "moduleResolution": "node",
         "target": "es6",
-        "outDir": "helmChartViewer",
-        "lib": [
-            "es6",
-            "dom"
-        ],
+        "outDir": "surveyViewer",
+        "lib": ["es6", "dom"],
         "jsx": "react",
         "sourceMap": true,
         "noUnusedLocals": true,
         // "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
         "experimentalDecorators": true,
-        "typeRoots": [
-            "../../../../node_modules/@types",
-            "../../@types"
-        ],
+        "typeRoots": ["../../../../node_modules/@types", "../../@types"],
         "baseUrl": ".",
         "resolveJsonModule": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "skipLibCheck": true
     },
-    "exclude": [
-        "node_modules"
-    ]
+    "exclude": ["node_modules"]
 }
