added telemetry event for post the survey
Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

--- a/package.json
+++ b/package.json
@@ -380,12 +380,9 @@
 			},
 			{
 				"command": "openshift.show.survey",
-				"title": "Survey Extension",
+				"title": "Share your feedback",
 				"category": "OpenShift",
-				"icon": {
-					"dark": "images/title/dark/icon-issue.svg",
-					"light": "images/title/light/icon-issue.svg"
-				}
+				"icon": "$(feedback)"
 			},
 			{
 				"command": "openshift.project.create",
