--- a/src/webview/feedback/app/tsconfig.json
+++ b/src/webview/feedback/app/tsconfig.json
@@ -3,7 +3,7 @@
         "module": "esnext",
         "moduleResolution": "node",
         "target": "es6",
-        "outDir": "surveyViewer",
+        "outDir": "feedbackViewer",
         "lib": ["es6", "dom"],
         "jsx": "react",
         "sourceMap": true,
