Add feedback webview (#2925)
* added survey webview

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

* added feedback UI code with mentioned changes

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

* changed the survey compile based on latest esbuild

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

* added telemetry event for post the survey

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

* changed name to feedback

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

* addressed review comment

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

* show submit button atleaset one question was answered

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

* Update src/webview/feedback/json.js

Co-authored-by: Mohit Suman <mohit.skn@gmail.com>

* Update src/webview/feedback/json.js

Co-authored-by: Mohit Suman <mohit.skn@gmail.com>

* Update src/webview/feedback/json.js

Co-authored-by: Mohit Suman <mohit.skn@gmail.com>

* Update src/webview/feedback/json.js

Co-authored-by: Mohit Suman <mohit.skn@gmail.com>

* addressed the review comments

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

* added caption text

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

* Update src/webview/feedback/app/feedback.tsx

Co-authored-by: Mohit Suman <mohit.skn@gmail.com>

* Update src/webview/feedback/app/index.html

Co-authored-by: Mohit Suman <mohit.skn@gmail.com>

* make underying on Rate us on Marketplace text

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

* added the share feedback

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

---------

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>
Co-authored-by: Mohit Suman <mohit.skn@gmail.com>

--- a/package.json
+++ b/package.json
@@ -201,6 +201,7 @@
 		"sinon-chai": "^3.7.0",
 		"source-map-support": "^0.5.21",
 		"style-loader": "^3.3.1",
+		"survey-react-ui": "^1.9.89",
 		"targz": "^1.0.1",
 		"ts-loader": "^9.2.6",
 		"tslint": "^5.20.1",
@@ -376,6 +377,12 @@
 					"dark": "images/title/dark/icon-issue.svg",
 					"light": "images/title/light/icon-issue.svg"
 				}
+			},
+			{
+				"command": "openshift.show.feedback",
+				"title": "Share your feedback",
+				"category": "OpenShift",
+				"icon": "$(feedback)"
 			},
 			{
 				"command": "openshift.project.create",
@@ -1121,6 +1128,11 @@
 					"command": "openshift.explorer.reportIssue",
 					"when": "view == openshiftProjectExplorer",
 					"group": "navigation@4"
+				},
+				{
+					"command": "openshift.show.feedback",
+					"when": "view == openshiftProjectExplorer",
+					"group": "navigation@5"
 				},
 				{
 					"command": "openshift.component.createFromLocal",
