Move download scripts into ./src
- Also list packages that they require as runtime dependencies

Fixes #2948

Signed-off-by: David Thompson <davthomp@redhat.com>

--- a/package.json
+++ b/package.json
@@ -102,7 +102,11 @@
 		"vscode-kubernetes-tools-api": "^1.3.0",
 		"vscode-welcome-view": "^0.0.4",
 		"wait-port": "^0.2.9",
-		"yaml": "^2.2.2"
+		"yaml": "^2.2.2",
+		"targz": "^1.0.1",
+		"hasha": "^5.2.2",
+		"unzip-stream": "^0.3.1",
+		"got": "^11.8.5"
 	},
 	"devDependencies": {
 		"@devfile/api": "^2.2.0-alpha-1666195451",
@@ -128,7 +132,6 @@
 		"@types/mkdirp": "^1.0.2",
 		"@types/mocha": "^9.0.0",
 		"@types/node": "^16.11.12",
-		"@types/pify": "^5.0.1",
 		"@types/proxyquire": "^1.3.28",
 		"@types/react": "^17.0.37",
 		"@types/react-copy-to-clipboard": "^5.0.4",
@@ -140,8 +143,10 @@
 		"@types/sinon": "^10.0.6",
 		"@types/sinon-chai": "^3.2.6",
 		"@types/string-format": "^2.0.0",
+		"@types/tar-fs": "^2.0.1",
 		"@types/targz": "^1.0.1",
 		"@types/tmp": "0.2.2",
+		"@types/unzip-stream": "^0.3.1",
 		"@types/validator": "^13.7.0",
 		"@types/vscode": "1.64.0",
 		"@typescript-eslint/eslint-plugin": "^5.6.0",
@@ -168,9 +173,7 @@
 		"express": "^4.17.2",
 		"file-loader": "^6.2.0",
 		"glob": "^7.2.0",
-		"got": "^11.8.5",
 		"handlebars": "^4.7.7",
-		"hasha": "5.2.2",
 		"istanbul": "^0.4.5",
 		"leasot": "^12.0.0",
 		"mocha": "^9.1.3",
@@ -178,7 +181,6 @@
 		"node-sass": "^8.0.0",
 		"npm-check-updates": "^16.6.3",
 		"npm-run-all": "^4.1.5",
-		"pify": "^5.0.0",
 		"prettier": "^2.5.1",
 		"pretty-bytes": "^5.6.0",
 		"proxyquire": "^2.1.3",
@@ -202,11 +204,9 @@
 		"source-map-support": "^0.5.21",
 		"style-loader": "^3.3.1",
 		"survey-react-ui": "^1.9.89",
-		"targz": "^1.0.1",
 		"ts-loader": "^9.2.6",
 		"tslint": "^5.20.1",
 		"typescript": "^4.5.2",
-		"unzip-stream": "^0.3.1",
 		"utf-8-validate": "^5.0.7",
 		"vscode-extension-tester": "^5.2.0"
 	},
