Remove dependency on "request"
The library is deprecated and we have several alternatives already in
our dependency tree.

Signed-off-by: David Thompson <davthomp@redhat.com>

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
 		"compile:ext": "tsc -b ./",
 		"compile:checkWebviews": "tsc -p ./src/webview -noEmit",
 		"compile:webviews": "node ./build/esbuild.mjs",
-        "watch": "tsc -watch -p ./",
+		"watch": "tsc -watch -p ./",
 		"clean": "shx rm -rf out/build out/coverage out/src out/test out/tools out/test-resources out/*Viewer",
 		"lint": "eslint . --ext .ts --quiet",
 		"lint-fix": "eslint . --ext .ts --fix",
@@ -83,6 +83,8 @@
 		"git-url-parse": "^13.1.0",
 		"gitlab": "10.0.1",
 		"globby": "^10.0.1",
+		"got": "^11.8.5",
+		"hasha": "^5.2.2",
 		"i18next": "^21.8.11",
 		"immutable": "^4.0.0",
 		"install": "^0.13.0",
@@ -97,17 +99,15 @@
 		"semver": "^7.3.5",
 		"stacktrace-parser": "^0.1.10",
 		"string-format": "^2.0.0",
+		"targz": "^1.0.1",
 		"tmp": "^0.2.1",
 		"tree-kill": "^1.2.2",
+		"unzip-stream": "^0.3.1",
 		"validator": "^13.7.0",
 		"vscode-kubernetes-tools-api": "^1.3.0",
 		"vscode-welcome-view": "^0.0.4",
 		"wait-port": "^0.2.9",
-		"yaml": "^2.2.2",
-		"targz": "^1.0.1",
-		"hasha": "^5.2.2",
-		"unzip-stream": "^0.3.1",
-		"got": "^11.8.5"
+		"yaml": "^2.2.2"
 	},
 	"devDependencies": {
 		"@devfile/api": "^2.2.0-alpha-1666195451",
@@ -196,7 +196,6 @@
 		"react-scroll-to-top": "^3.0.0",
 		"react-syntax-highlighter": "^15.5.0",
 		"remap-istanbul": "^0.13.0",
-		"request": "^2.88.2",
 		"sass-loader": "^13.0.2",
 		"shelljs": "^0.8.5",
 		"shx": "^0.3.3",
