esbuild "watch mode"
Create a new script that automates running esbuild and TypeScript
as a background task.
This means that, while `npm run watch` is running,
if there are any changes to the source files,
then the source files will be recompiled automatically.

Fixes #2968

Signed-off-by: David Thompson <davthomp@redhat.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
             "outFiles": [
                 "${workspaceFolder}/out/src/**/*.js"
             ],
-            "preLaunchTask": "compile",
+            "preLaunchTask": "watch",
             "env": {
                 "VSCODE_REDHAT_TELEMETRY_DEBUG":"true"
             }
