--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
 		"compile:ext": "tsc -b ./",
 		"compile:checkWebviews": "tsc -p ./src/webview -noEmit",
 		"compile:webviews": "node ./build/esbuild.mjs",
-		"watch": "tsc -watch -p ./",
+		"watch": "node ./build/esbuild-watch.mjs",
 		"clean": "shx rm -rf out/build out/coverage out/src out/test out/tools out/test-resources out/*Viewer",
 		"lint": "eslint . --ext .ts --quiet",
 		"lint-fix": "eslint . --ext .ts --fix",
@@ -160,6 +160,7 @@
 		"bufferutil": "^4.0.5",
 		"call-bind": "^1.0.2",
 		"chai": "^4.3.4",
+		"chokidar": "^3.5.3",
 		"codecov": "^3.8.2",
 		"css-loader": "^6.5.1",
 		"decache": "^4.6.1",
