--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
 		"K8s",
 		"Cloud",
 		"podman",
-		"Helm"
+		"Helm",
+		"kubernetes-extension-cloud-provider"
 	],
 	"icon": "images/openshift_extension.png",
 	"main": "./out/src/extension",
@@ -214,6 +215,7 @@
 		"onView:openshiftProjectExplorer",
 		"onView:extension.vsKubernetesExplorer",
 		"onView:openshiftComponentTypesView",
+		"onView:kubernetes.cloudExplorer",
 		"onCommand:openshift.welcome",
 		"onCommand:openshift.getStarted",
 		"onCommand:openshift.about",
@@ -795,6 +797,16 @@
 				"command": "openshift.component.deleteSourceFolder",
 				"title": "Delete Source Code Folder",
 				"category": "OpenShift"
+			},
+			{
+				"command": "openshift.sandbox.open.dashboard",
+				"title": "Open Developer Console",
+				"category": "OpenShift"
+			},
+			{
+				"command": "openshift.sandbox.signup",
+				"title": "Provision OpenShift Developer Sandbox",
+				"category": "OpenShift"
 			}
 		],
 		"keybindings": [
@@ -1146,6 +1158,16 @@
 				}
 			],
 			"view/item/context": [
+                {
+                    "command": "openshift.sandbox.signup",
+                    "category": "1@1",
+                    "when": "viewItem == openshift.sandbox.status.none"
+                },
+                {
+                    "command": "openshift.sandbox.open.dashboard",
+                    "category": "1@1",
+                    "when": "viewItem == openshift.sandbox.status.ready"
+                },
 				{
 					"command": "clusters.openshift.csv.create",
 					"group": "1@1",
