--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
         "experimentalDecorators": true,
         "resolveJsonModule": true,
         "skipLibCheck": true,
+        "incremental": true
     },
     "exclude": [
         "node_modules",
