esbuild "watch mode" (#2980)
* esbuild "watch mode"

Create a new script that automates running esbuild and TypeScript
as a background task.
This means that, while `npm run watch` is running,
if there are any changes to the source files,
then the source files will be recompiled automatically.

Fixes #2968

Signed-off-by: David Thompson <davthomp@redhat.com>

* [WIP] Try incremental compilation

Signed-off-by: David Thompson <davthomp@redhat.com>

---------

Signed-off-by: David Thompson <davthomp@redhat.com>

--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
 		"compile:ext": "tsc -b ./",
 		"compile:checkWebviews": "tsc -p ./src/webview -noEmit",
 		"compile:webviews": "node ./build/esbuild.mjs",
-		"watch": "tsc -watch -p ./",
-		"clean": "shx rm -rf out/build out/coverage out/src out/test out/tools out/test-resources out/*Viewer",
+		"watch": "node ./build/esbuild-watch.mjs",
+		"clean": "shx rm -rf out/build out/coverage out/src out/test out/tools out/test-resources out/*Viewer out/**.tsbuildinfo",
 		"lint": "eslint . --ext .ts --quiet",
 		"lint-fix": "eslint . --ext .ts --fix",
 		"lint-nic": "eslint . --ext .ts --no-inline-config",
@@ -160,6 +160,7 @@
 		"bufferutil": "^4.0.5",
 		"call-bind": "^1.0.2",
 		"chai": "^4.3.4",
+		"chokidar": "^3.5.3",
 		"codecov": "^3.8.2",
 		"css-loader": "^6.5.1",
 		"decache": "^4.6.1",
