--- a/package.json
+++ b/package.json
@@ -78,7 +78,6 @@
 		"@redhat-developer/vscode-redhat-telemetry": "^0.5.2",
 		"clsx": "^1.1.1",
 		"fs-extra": "^10.0.0",
-		"git-url-parse": "^13.1.0",
 		"globby": "^10.0.1",
 		"got": "^11.8.6",
 		"hasha": "^5.2.2",
@@ -152,6 +151,7 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"express": "^4.17.2",
 		"file-loader": "^6.2.0",
+		"git-up": "^7.0.0",
 		"glob": "^7.2.0",
 		"istanbul": "^0.4.5",
 		"leasot": "^12.0.0",
