Create component options view
Signed-off-by: Jessica He <jhe@redhat.com>

--- a/.eslintignore
+++ b/.eslintignore
@@ -12,6 +12,7 @@ src/webview/cluster
 out
 src/webview/common
 src/webview/create-service
+src/webview/create-component
 src/webview/devfile-registry
 src/webview/welcome
 src/webview/git-import
