--- a/package.json
+++ b/package.json
@@ -213,6 +213,7 @@
 		"onCommand:openshift.project.delete.palette",
 		"onCommand:openshift.component.createFromLocal",
 		"onCommand:openshift.component.openImportFromGit",
+		"onCommand:openshift.component.openCreateComponent",
 		"onCommand:openshift.component.createFromRootWorkspaceFolder",
 		"onCommand:openshift.component.describe",
 		"onCommand:openshift.component.openInBrowser",
@@ -424,6 +425,15 @@
 			{
 				"command": "openshift.component.createFromLocal",
 				"title": "New Component",
+				"category": "OpenShift",
+				"icon": {
+					"light": "images/title/light/workspace-new.svg",
+					"dark": "images/title/dark/workspace-new.svg"
+				}
+			},
+			{
+				"command": "openshift.component.openCreateComponent",
+				"title": "Create Component",
 				"category": "OpenShift",
 				"icon": {
 					"light": "images/title/light/workspace-new.svg",
@@ -1129,6 +1139,11 @@
 				},
 				{
 					"command": "openshift.component.openImportFromGit",
+					"when": "view == openshiftComponentsView",
+					"group": "navigation"
+				},
+				{
+					"command": "openshift.component.openCreateComponent",
 					"when": "view == openshiftComponentsView",
 					"group": "navigation"
 				}
