Start work on devfile search component
Signed-off-by: David Thompson <davthomp@redhat.com>

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,7 +17,7 @@
                 "base": "$tsc-watch",
             },
             "presentation": {
-                "reveal": "silent",
+                "reveal": "never",
             },
         },
         {
