--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,7 @@
         "src/webview/git-import/app",
         "src/webview/helm-chart/app",
         "src/webview/feedback/app",
+        "src/webview/serverless-function/app",
         "src/webview/common"
     ]
 }
