Fix cluster-dependent UI test suite
With a running `crc` cluster, run `npm run cluster-ui-test` in order to
run the cluster-dependent UI test suite.

- renamed `smoke-test` to `cluster-ui-test` and removed some of the
  tests that overlap between the suites
- Most of this work is also done in #2803, so I just copied it from over
  there
- Temporarily addresses #2780, we will need to rewrite it once the new
  create component workflow is in place

Fixes #2777

Signed-off-by: David Thompson <davthomp@redhat.com>

--- a/test/ui/Jenkinsfile
+++ b/test/ui/Jenkinsfile
@@ -19,9 +19,9 @@ node('rhel8') {
                 junit 'report.xml'
             }
         }
-        stage('UI smoke test') {
+        stage('cluster-dependent UI tests') {
             wrap([$class: 'Xvnc']) {
-                sh "npm run smoke-test"
+                sh "npm run cluster-ui-test"
                 junit 'report.xml'
             }
         }
