--- a/test/ui/Jenkinsfile
+++ b/test/ui/Jenkinsfile
@@ -21,9 +21,9 @@ node('rhel8') {
                 }
             }
         }
-        stage('UI smoke test') {
+        stage('cluster-dependent UI tests') {
             wrap([$class: 'Xvnc']) {
-                sh "npm run smoke-test"
+                sh "npm run cluster-ui-test"
                 junit 'report.xml'
             }
         }
