add terminal view for build and run commands
Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

--- a/package.json
+++ b/package.json
@@ -776,6 +776,11 @@
 				"category": "OpenShift"
 			},
 			{
+				"command": "openshift.Serverless.openFunction",
+				"title": "Open Function",
+				"category": "OpenShift"
+			},
+			{
 				"command": "openshift.Serverless.createFunction",
 				"title": "Create Function",
 				"category": "OpenShift",
