--- a/test/ui/Jenkinsfile
+++ b/test/ui/Jenkinsfile
@@ -14,9 +14,11 @@ node('rhel8') {
 
     withEnv(['JUNIT_REPORT_PATH=report.xml']) {
         stage('integration tests') {
-            wrap([$class: 'Xvnc']) {
+            catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
+                wrap([$class: 'Xvnc']) {
                 sh "npm run test-integration"
                 junit 'report.xml'
+                }
             }
         }
         stage('UI smoke test') {
