--- a/package.json
+++ b/package.json
@@ -109,16 +109,14 @@
 		"@mui/material": "^5.11.12",
 		"@mui/styles": "^5.11.12",
 		"@rjsf/core": "^5.0.0-beta.14",
-		"@rjsf/material-ui": "^5.0.0-beta.14",
+		"@rjsf/validator-ajv8": "^5.10.0",
 		"@segment/analytics-next": "^1.17.4",
 		"@svgr/plugin-jsx": "^8.0.1",
 		"@types/chai": "^4.3.0",
 		"@types/express": "^4.17.13",
 		"@types/fs-extra": "^9.0.13",
-		"@types/js-base64": "^3.3.1",
 		"@types/lodash": "^4.14.177",
 		"@types/make-fetch-happen": "^9.0.1",
-		"@types/minipass": "^3.3.5",
 		"@types/mkdirp": "^1.0.2",
 		"@types/mocha": "^9.0.0",
 		"@types/node": "^16.11.12",
@@ -126,7 +124,6 @@
 		"@types/react": "^17.0.37",
 		"@types/react-copy-to-clipboard": "^5.0.4",
 		"@types/react-dom": "^17.0.11",
-		"@types/react-jsonschema-form": "^1.7.8",
 		"@types/react-lazylog": "^4.5.1",
 		"@types/react-syntax-highlighter": "^13.5.2",
 		"@types/shelljs": "^0.8.9",
@@ -172,7 +169,6 @@
 		"react": "^17.0.2",
 		"react-copy-to-clipboard": "^5.1.0",
 		"react-dom": "^17.0.2",
-		"react-jsonschema-form": "^1.8.1",
 		"react-lazylog": "^4.5.3",
 		"react-loader-spinner": "^4.0.0",
 		"react-phone-input-2": "^2.14.0",
