Delete existing 'create component' parts
- Delete the quick pick based create component
- Delete the 'git import' workflow
- Replace the devfile registry viewer with the one contributed in create
  component
- Fix a few bugs I found:
  - If you add the staging devfile registry,
    and enable and disable it repeatedly in the devfile search,
    the list of items will grow
  - Maybe some other I forget

Signed-off-by: David Thompson <davthomp@redhat.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,9 @@
     },
     // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
     "typescript.tsc.autoDetect": "off",
+    // Use the workspace's tsserver installation
+    "typescript.tsdk": "./node_modules/typescript/lib",
+    "typescript.enablePromptUseWorkspaceTsdk": true,
     "debug.node.autoAttach": "off",
     "eslint.enable": true
 }
