--- a/.eslintignore
+++ b/.eslintignore
@@ -9,14 +9,14 @@ test-resources
 src/webview/log
 src/webview/describe
 src/webview/cluster
-src/webview/webpack.config.js
 out
 src/webview/common
 src/webview/create-service
 src/webview/create-component
 src/webview/devfile-registry
 src/webview/welcome
-src/webview/git-import
 src/webview/helm-chart
 src/webview/feedback
+# vendored from https://github.com/IonicaBizau/git-url-parse, see https://github.com/IonicaBizau/git-url-parse/pull/159
+src/util/gitParse.ts
 test/sandbox-registration
