--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -88,9 +88,8 @@
                 "-o",
                 "${workspaceFolder}/test/ui/settings.json",
                 "-m",
+                "--mocha_config",
                 "${workspaceFolder}/test/ui/.mocharc.js",
-                "-c",
-                "max",
                 "-e",
                 "./test-resources/extensions",
                 "-i"
