Address some of the feedback on 'Create Component' (see notes)
- Clear field button for search field in devfile search
- Select the template project by default if there is only one
  - Handle the case that there are no template projects
    (you can test with the Universal Developer Image devfile)
- Change icon buttons to use secondary text colour
- Prepopulate the component name field based on the git url or template project name
- Rename `fromExistingGitRepo.tsx` to address typo
- Add a copy button for devfile YAML
- Focus existing Create Component webview instead of opening a second instance
  (There are issues with how message passing is handled if there are multiple instances of Create Component running)
- Make devfile search scale better when zooming
  (there is no horizontal scrolling up to zoom level 4 on my 1440p monitor)

Signed-off-by: David Thompson <davthomp@redhat.com>

--- a/src/webview/tsconfig.json
+++ b/src/webview/tsconfig.json
@@ -17,6 +17,8 @@
     "include": [
         "*/app/**/*.ts",
         "*/app/**/*.tsx",
+        "common/*.tsx",
+        "common/*.ts"
     ],
     "exclude": [
         "*/*.ts"
