--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,7 @@
         "src/webview/cluster/app",
         "src/webview/create-service/app",
         "src/webview/create-component/app",
+        "src/webview/create-component/pages",
         "src/webview/devfile-registry/app",
         "src/webview/welcome/app",
         "src/webview/git-import/app",
